feat: 完善工单详情页和回复功能
前端:
- 重构工单详情页面布局
- 添加用户头像和角色标识
- 实现回复筛选（全部/公开/内部）
- 添加快捷回复模板
- 优化状态流转操作（带确认对话框）
- 添加状态流转历史时间线
- 显示优先级提示和响应时间要求
- 计算工单处理耗时

后端:
- 工单详情接口返回用户信息映射
- 回复列表接口返回用户信息映射